	- Invalid groups assigned to players in users.yml will no longer cause a crash. GM will now set them to the default group instead.
	- Fix for Users.yml containing only 'users:' causing a crash.
	- GroupManager will now generate a fresh Users and Groups yml if either file is empty.
	- Fix for an infinite loop bug with the new Bukkit Perms during a new user creation.
    - Fixed BukkitPerms population. Wasn't correctly setting superperms.
    - Push updates to superperms for all valid GM commands.
    - All GroupManager commands issued by players are now echoed in the console.
    - Reverted WorldHolder static change to maintain backward plugin compatibility.
    - Update to handle 'getDescription().getPermissions(') returning a list (CB 1172).
    - Fix for null in PLAYER_TELEPORT for bukkit perms.
    - Fixed wasteful updating of perms on a manload.
    - manulistp now accepts an additional + to list ALL Superperms effective permissions (/manulistp <name> +).
    - manucheckp also outputs superperms results.
    - Removed superperms update on plugins unloading. Unneeded and created undesired lag on shutdown.
    - Added a BukkitPermsUpdateTask to only update superperms once on a load/reload.
    - Fix for GM not checking inheritance for known superperms nodes.
    - Optimized getAllPlayersPermissions and fixed pushing unknown perms to superperms.
v 1.2:
	- Changed priority of Registered events to lowest.
	- Fixed an issue with superperms where plugins define perms with inheritance after the root perms
	- Rewrote Config loading to use Bukkits Configuration features
	- Added an opOverride setting in config.
	  If present and set to false, op's will not get overriding permissions in GroupManager.
	  (one op will not be able to alter another op's settings)
	- GM will now create all relevant world data files for non mirrored worlds.
	  (for all worlds named in config.yml)
	- Attempt to stop GM wiping groups/users yml's on a bad shut down.